# BedlamGL

./: .gitmodules  CMakeLists.txt  README.md
assets/: default.json
deprecated/buffer/: buffer.cpp  buffer.hpp
deprecated/include/renderer/: drawable.hpp  frame_buffer.hpp  renderer.hpp  renderer_api.hpp  shader_source.hpp
deprecated/src/renderer/: shader_source.cpp
include/: marathon.hpp
include/core/: asset.hpp  module.hpp  node.hpp  object.hpp  property.hpp  resource.hpp  tick_timer.hpp  uuid.hpp
include/depr_renderer/: texture.hpp
include/depr_renderer/opengl/: opengl.hpp  opengl_renderer.hpp
include/ecs/: asset.hpp
include/event/: event.hpp
include/event/sdl2/: event.hpp
include/events/: events.hpp
include/events/sdl2/: events.hpp
include/input/: input.hpp
include/renderer/: buffer.hpp  components.hpp  context.hpp  default.hpp  drawable.hpp  frame_buffer.hpp  material.hpp  mesh.hpp  model_loader.hpp  renderer.hpp  shader.hpp  shader_loader.hpp  shader_source.hpp  texture.hpp
include/renderer/opengl/: buffer.hpp  mesh.hpp  opengl.hpp  opengl_context.hpp  opengl_frame_buffer.hpp  opengl_material.hpp  opengl_mesh.hpp  opengl_renderer.hpp  opengl_shader.hpp  opengl_shader_source.hpp  renderer.hpp  shader.hpp
include/runtime/: app.hpp  application.hpp  interactive.hpp
include/time/: time.hpp
include/window/: window.hpp
include/window/sdl2/: window.hpp
src/: default.cpp  marathon.cpp
src/core/: asset.cpp  logger.cpp  module.cpp  node.cpp  property.cpp  resource.cpp
src/depr_renderer/: shader.cpp
src/depr_renderer/opengl/: shader_source.cpp
src/event/: event.cpp  events.cpp
src/event/sdl2/: event.cpp  events.cpp
src/platform/opengl/: opengl.cpp  opengl_mesh.cpp  opengl_renderer.cpp  opengl_shader.cpp
src/renderer/: buffer.cpp  context.cpp  drawable.cpp  frame_buffer.cpp  material.cpp  mesh.cpp  renderer.cpp  shader.cpp  shader_source.cpp
src/renderer/opengl/: buffer.cpp  mesh.cpp  opengl.cpp  opengl_context.cpp  opengl_frame_buffer.cpp  opengl_material.cpp  opengl_mesh.cpp  opengl_renderer.cpp  opengl_shader.cpp  opengl_shader_source.cpp  renderer.cpp  shader.cpp
src/runtime/: app.cpp
src/time/: time.cpp
src/window/: window.cpp
src/window/sdl2/: window.cpp
test/bedlam/include/: runtime.hpp
test/bedlam/src/: main.cpp
test/example/include/: my_app.hpp
test/example/src/: main.cpp  my_app.cpp
test/live_test/src/: main.cpp
(+6 files in other folders)
